Will this line change allow proper rendering....

--- a/01_District_Prices.ipynb
+++ b/01_District_Prices.ipynb
@@ -66,7 +66,9 @@
     "\n",
     "*How does it work, mechanically?*\n",
     "\n",
-    "<img src=\"./PlantUML/01_District_Prices.PNG\" alt=\"img\">\n"
+    "<h2 style=\"color:SlateGray;\">Workflow</h2>\n",
+    "\n",
+    "![Workflow-District-Prices](PlantUML/01_District_Prices.png)"
    ]
   },
   {
