Added documentation to District Prices

--- a/01_District_Prices.ipynb
+++ b/01_District_Prices.ipynb
@@ -22,51 +22,25 @@
     "<a id='Models-LinearRegression'></a>\n",
     "*LinearRegression*\n",
     "\n",
-    "*What is it for, conceptually?*\n",
+    "Models the linear relationship between data categories from the dataset.\n",
     "\n",
-    "*How does it work, mechanically?*\n",
+    "Approximates the relationship between data categories with linear equations of the form $\\textbf{y}_i = \\theta_1 \\cdot \\textbf{x}_j + \\theta_2$.\n",
     "\n",
     "<a id='Models-DecisionTreeRegressor'></a>\n",
     "*DecisionTreeRegressor*\n",
     "\n",
-    "*What is it for, conceptually?*\n",
+    "Models non-linear relationships between data categories with a binary tree.\n",
     "\n",
-    "*How does it work, mechanically?*\n",
+    "Divides the graph of all data points with segments along the axes which box around subsets of points forming a prediction. Tree traversal is achieved by checking if an input value is above or below the threshold set by the axis segments. \n",
     "\n",
     "<a id='Models-RandomForestRegressor'></a>\n",
     "*RandomForestRegressor*\n",
     "\n",
-    "*What is it for, conceptually?*\n",
+    "A single randomly initialized [*decision tree's*](#Models-DecisionTreeRegressor) predictions will be biased, thus, using large numbers of these biased trees will statistically converge around a more accurate prediction.\n",
     "\n",
-    "*How does it work, mechanically?*\n",
-    "\n",
-    "**Performance Measures**\n",
-    "\n",
-    "<a id='Performance-Measures-RMSE'></a>\n",
-    "*Root Mean Squre Error (RMSE)*\n",
-    "\n",
-    "$\\text{RMSE}(\\textbf{X},h) = \\sqrt{ \\dfrac{1}{m} \\sum_{i = 1}^{m}\\left( h(\\textbf{x}_i) - y_i \\right)^2 }$\n",
-    "\n",
-    "*What is it for, conceptually?*\n",
-    "\n",
-    "*How does it work, mechanically?*\n",
-    "\n",
-    "<a id='Performance-Measures-MAE'></a>\n",
-    "*Mean Absolute Error (MAE)*\n",
-    "\n",
-    "*What is it for, conceptually?*\n",
-    "\n",
-    "*How does it work, mechanically?*\n",
-    "\n",
-    "$\\text{MAE}(\\textbf{X},h) = \\dfrac{1}{m}\\sum_{i=1}^{m}\\left| h(\\textbf{X}_i) - y_i\\right|$\n",
+    "Spawns a specified number of [*decision trees*](#Models-DecisionTreeRegressor) and tallies up each tree's predictions, the prediction with the highest number of votes is used as the model's final prediction. Trees with low prediction scores are replaced by new randomly configured trees.\n",
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
-    "\n",
-    "*What is it for, conceptually?*\n",
-    "\n",
-    "*How does it work, mechanically?*\n",
-    "\n",
-    "<h2 style=\"color:SlateGray;\">Workflow</h2>\n",
     "\n",
     "![Workflow-District-Prices](PlantUML/01_District_Prices.png)"
    ]
