Swapping .png for SVG

--- a/01_District_Prices.ipynb
+++ b/01_District_Prices.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
-    "![Workflow-District-Prices](PlantUML/01_District_Prices.png)"
+    "![Workflow-District-Prices](PlantUML/01_District_Prices.svg)"
    ]
   },
   {
