Apparently this will fix the SVG rendering problem with MD

--- a/01_District_Prices.ipynb
+++ b/01_District_Prices.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
-    "<img src='PlantUML/01_District_Prices.png'>"
+    "<img src='PlantUML/01_District_Prices.svg?sanitize=true'>"
    ]
   },
   {
